--- a/api-1/Dockerfile
+++ b/api-1/Dockerfile
@@ -1,7 +1,10 @@
 FROM node:9.1
 
+RUN groupadd -r docker && useradd --no-log-init -r -g docker docker
+
 # Create app directory
 WORKDIR /usr/src/app
+
 
 # Install app dependencies
 # A wildcard is used to ensure both package.json AND package-lock.json are copied
@@ -11,6 +14,8 @@ COPY package*.json ./
 RUN npm install
 # If you are building your code for production
 # RUN npm install --only=production
+
+USER docker
 
 # Bundle app source
 COPY . .
