--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,18 @@
 version: "3"
 services:
+  website:
+    build: ./website
+    ports:
+      - 8080:80
+    volumes:
+      - $PWD/website:/usr/src/app
   api-1:
     # replace username/repo:tag with your name and image details
     build: ./api-1
     ports:
-      - "8080:8080"
+      - 8081:8080
     networks:
       - webnet
-
+    
 networks:
   webnet:
